[package]
name = "rust-stm"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.2.0", features = ["defmt", "time-driver-any", "stm32h753zi", "memory-x", "unstable-pac", "exti"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
panic-probe = "0.3.2"

[profile.release]
debug = 2
